compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__assignment.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 152
expression: "\npub fn go(x) {\n  let y = case x {\n    True -> 1\n    _ -> 0\n  }\n  y\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let y = case x {
    True -> 1
    _ -> 0
  }
  y
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let _block;
  if (x) {
    _block = 1;
  } else {
    _block = 0;
  }
  let y = _block;
  return y;
}
