compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_branches_guards_are_wrapped_in_parentheses.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 243
expression: "\npub fn anything() -> a {\n  case [] {\n    [a] if False || True -> a\n    _ -> anything()\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn anything() -> a {
  case [] {
    [a] if False || True -> a
    _ -> anything()
  }
}


----- COMPILED JAVASCRIPT
import { toList, Empty as $Empty } from "../gleam.mjs";

export function anything() {
  while (true) {
    let $ = toList([]);
    if (!($ instanceof $Empty)) {
      let $1 = $.tail;
      if ($1 instanceof $Empty && false || true) {
        let a = $.head;
        return a;
      }
    }
  }
}
