compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_matched_no_variant_record.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 625
expression: "\npub fn go(x) {\n   case x {\n     Ok(Nil) -> Ok(Nil)\n     _ -> Error(Nil)\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
   case x {
     Ok(Nil) -> Ok(Nil)
     _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import { Ok, Error } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok) {
    return x;
  } else {
    return new Error(undefined);
  }
}
