compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_matched_no_variant_record_2.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 638
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     Ok(gleam.Nil) -> Ok(Nil)\n     _ -> Error(Nil)\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     Ok(gleam.Nil) -> Ok(Nil)
     _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok, Error } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok) {
    return x;
  } else {
    return new Error(undefined);
  }
}
