compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__case_building_matched_string_2.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 548
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     \"a\" as a <> rest -> a <> rest\n     _ -> \"\"\n   }\n}"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     "a" as a <> rest -> a <> rest
     _ -> ""
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go(x) {
  if (x.startsWith("a")) {
    return x;
  } else {
    return "";
  }
}
